; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_ffmpeg_output_full_stop.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-ffmpeg/extr_obs-ffmpeg-output.c_ffmpeg_output_full_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ffmpeg_output = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ffmpeg_output_full_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffmpeg_output_full_stop(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ffmpeg_output*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ffmpeg_output*
  store %struct.ffmpeg_output* %5, %struct.ffmpeg_output** %3, align 8
  %6 = load %struct.ffmpeg_output*, %struct.ffmpeg_output** %3, align 8
  %7 = getelementptr inbounds %struct.ffmpeg_output, %struct.ffmpeg_output* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.ffmpeg_output*, %struct.ffmpeg_output** %3, align 8
  %12 = getelementptr inbounds %struct.ffmpeg_output, %struct.ffmpeg_output* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @obs_output_end_data_capture(i32 %13)
  %15 = load %struct.ffmpeg_output*, %struct.ffmpeg_output** %3, align 8
  %16 = call i32 @ffmpeg_deactivate(%struct.ffmpeg_output* %15)
  br label %17

17:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @obs_output_end_data_capture(i32) #1

declare dso_local i32 @ffmpeg_deactivate(%struct.ffmpeg_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
